added student model, controller, views added initial database creation migrations

--- a/GestionareGrupe/Views/Home/Index.cshtml
+++ b/GestionareGrupe/Views/Home/Index.cshtml
@@ -2,7 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron">
+    <h1>Gestionare grupe</h1>
+</div>
+<div class="row">
+    <div>
+        <h2>Bine ati venit pe pagina universitatii!</h2>
+        <p>Aici puteti accesa informatii referitoare la studentii, cursurile, grupele si profesorii institutiei de invatamant.</p>
+    </div>
 </div>
